[gd_scene load_steps=10 format=3 uid="uid://ct5150fxwyrw0"]

[ext_resource type="Script" path="res://Scenes/boss_1.gd" id="1_aavdx"]
[ext_resource type="Texture2D" uid="uid://8td2khvn8nbe" path="res://Assets/Objects/warship animation.png" id="2_qfkya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kwpii"]
atlas = ExtResource("2_qfkya")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpxst"]
atlas = ExtResource("2_qfkya")
region = Rect2(200, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_4iysk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwpii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpxst")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8ebk"]

[sub_resource type="Animation" id="Animation_xfmtq"]
resource_name = "moving"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ca155"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phhen"]
_data = {
"RESET": SubResource("Animation_ca155"),
"moving": SubResource("Animation_xfmtq")
}

[node name="Boss1" type="CharacterBody2D" groups=["enemy"]]
y_sort_enabled = true
scale = Vector2(10, 10)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_aavdx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.0999979, 0.2)
scale = Vector2(0.098, 0.098)
sprite_frames = SubResource("SpriteFrames_4iysk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k8ebk")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CannonMuzzle" type="Marker2D" parent="."]
position = Vector2(-12.8, 0)

[node name="LaserMuzzle1" type="Marker2D" parent="."]
position = Vector2(-12.8, -6.4)

[node name="LaserMuzzle2" type="Marker2D" parent="."]
position = Vector2(-12.8, 6.4)

[node name="HPBar" type="ColorRect" parent="."]
offset_left = -6.4
offset_top = 10.0
offset_right = 6.6
offset_bottom = 12.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="HPFill" type="ColorRect" parent="."]
offset_left = -6.4
offset_top = 10.0
offset_right = 6.6
offset_bottom = 12.0
color = Color(0.705882, 0.117647, 0.211765, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_phhen")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
